--- a/dash.fragmencrypter/pom.xml
+++ b/dash.fragmencrypter/pom.xml
@@ -103,7 +103,7 @@
         </dependency>
         <dependency>
             <groupId>org.mp4parser</groupId>
-            <version>1.9.31-SNAPSHOT</version>
+            <version>1.9.31</version>
             <artifactId>muxer</artifactId>
         </dependency>
         <dependency>
