--- a/dash.fragmencrypter/pom.xml
+++ b/dash.fragmencrypter/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.castlabs.dash</groupId>
         <artifactId>dash.encrypt</artifactId>
-        <version>1.7.59</version>
+        <version>1.7.60-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>com.castlabs.dash</groupId>
             <artifactId>dash.xsd</artifactId>
-            <version>1.7.59</version>
+            <version>1.7.60-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
