--- a/dash.fragmencrypter/pom.xml
+++ b/dash.fragmencrypter/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.castlabs.dash</groupId>
         <artifactId>dash.encrypt</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>com.castlabs.dash</groupId>
             <artifactId>dash.xsd</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
