--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.castlabs.dash</groupId>
     <artifactId>dash.encrypt</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <modules>
         <module>dash.xsd</module>
         <module>dash.fragmencrypter</module>
@@ -65,7 +65,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:castlabs/dashencrypt.git</developerConnection>
-        <tag>dash.encrypt-2.0.0</tag>
+        <tag>dash.encrypt-1.7.56-3</tag>
     </scm>
 
     <build>
